--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <version>2.4.0</version>
     </parent>
     <artifactId>julielab-json-tools</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>JULIE Lab JSON Tools</name>
     <build>
         <plugins>
